# LODE-GPs

./: .gitmodules  DiffEqGPs - Multioutput test.ipynb  DiffEqGPs.ipynb  LICENSE  LODEGP.py  MWE.py  README.md  SNF and GP.ipynb  Testbed.ipynb  gpytorch  kernels.py  kernels_test_case.py  pyproject.toml  test_kernels.py
examples/: MWE.py
lodegp/: LODEGP.py  kernels.py
