[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "LODEGP"
description = "A python package for the class of LODE Gaussian Processes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Andreas Besginow", email = "andreas.besginow@th-owl.de"},
]
requires-python = ">=3.12.9"
version = "1.0.5"